...
 *   3. Add to .env.local:
 *        EXPO_PUBLIC_POSTHOG_API_KEY=phc_xxxx
 *        EXPO_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com  (or eu.i.posthog.com)
 *
 * Usage:
 *   import { capture, identify, reset } from '@/lib/analytics'
 *   capture('order_placed', { garment_type: 'Suit' })
 */

import PostHog from 'posthog-react-native'

let client: PostHog | null = null
let analyticsEnabled = false
...
